# 3fd

./: 3FD.sln  CONTROL  bootstrap.sh  build.ps1  build.sh  configure.sh  portfile.cmake  setup.sh
3FD/: 3FD.WinRT.UWP.vcxproj  3FD.vcxproj  3FD.vcxproj.filters  CMakeLists.txt  gc.h  gc_vertexstore.h  opencl.h  preprocessing.h  rpc_impl_client.cpp  sqlite.h  utils.h  utils_algorithms.h  utils_dynmempool.cpp  utils_event.cpp  utils_memorypool.cpp
IntegrationTests/: CMakeLists.txt  IntegrationTests.cpp  IntegrationTests.vcxproj  tests_wws.cpp
IntegrationTests/WinRT.UWP/: IntegrationTestsApp.WinRT.UWP.vcxproj
IntegrationTests/WinRT.UWP/Generated Files/: XamlTypeInfo.g.cpp
TestRpcClient/: TestRpcClient.vcxproj  application.config
TestWwsClient/: TestWwsClient.vcxproj  application.config  tests_wws.cpp
UnitTests/: CMakeLists.txt  UnitTests.cpp  UnitTests.vcxproj  tests_utils_algorithms.cpp
UnitTests/WinRT.UWP/: UnitTestsApp.WinRT.UWP.vcxproj
UnitTests/WinRT.UWP/Generated Files/: XamlTypeInfo.g.cpp
gtest/WinRT.UWP/: gtest.WinRT.UWP.vcxproj
gtest/include/gtest/internal/: gtest-port.h
gtest/msvc/: gtest-md.vcxproj
gtest/src/: gtest-all.cc
vcpkg/ports/3fd/: CONTROL  portfile.cmake
vcpkg_port/: CONTROL  portfile.cmake
